<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Hopes</string>
    <string name="next">Next</string>
    <string name="some_input">Some input</string>
    <string name="hello">Hello</string>
    <string name="submit">Submit</string>
    <string name="welcome">Welcome</string>
    <string name="chat">Chat</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="enter_category">Enter content category</string>
    <string name="content">Content</string>
    <string name="Search">Search</string>
    <string name="password">password</string>
    <string name="email">email</string>
    <string name="title">Title: </string>
    <string name="description">Description: </string>
    <string name="age_rating">Age Rating: </string>
    <string name="average_rating">Average Rating: </string>
    <string name="status">Status: </string>
</resources>