<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/l"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_chat"
            android:icon="@drawable/l"
            android:title="@string/chat" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/l"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/l"
            android:title="@string/logout" />
    </group>
</menu>