<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_grey">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    <ImageView
        android:layout_width="match_parent"
        android:id="@+id/img"
        android:layout_height="220dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    <TextView
        android:text="@string/title"
        android:textSize="25sp"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/title"
        android:text="@string/welcome"
        android:textSize="25sp"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    </LinearLayout>>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    <TextView
        android:text="@string/description"
        android:textSize="25sp"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:paddingTop="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/description"
        android:text="@string/welcome"
        android:textColor="@color/white"
        android:textSize="25sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    <TextView
        android:textSize="25sp"
        android:textColor="@color/black"
        android:text="@string/average_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:paddingTop="5dp"
        android:id="@+id/rating"
        android:text="@string/welcome"
        android:textSize="25sp"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <TextView
        android:text="@string/age_rating"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:paddingTop="5dp"
        android:id="@+id/age"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:text="@string/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    <TextView
        android:textSize="25sp"
        android:textColor="@color/black"
        android:text="@string/status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:paddingTop="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/status"
        android:text="@string/welcome"
        android:textColor="@color/white"
            android:textSize="25sp" />
    </LinearLayout>>

    </LinearLayout>

</ScrollView>